Fixed star alignment

--- a/app/views/daycares/index.html.erb
+++ b/app/views/daycares/index.html.erb
@@ -107,7 +107,7 @@
         <div class="d-flex flex-wrap">
           <% @daycares.each do |daycare| %>
             <div class='col col-sm-12 p-2'>
-              <div class="card-product index-card d-flex justi align-items-centerfy-content-between">
+              <div class="card-product index-card d-flex justify-content-between">
               <div class="d-flex justify-content-start">
                 <img src="https://static01.nyt.com/images/2020/10/16/multimedia/par-daycare-16/par-daycare-16-superJumbo.jpg" />
                 <div class="d-flex justify-content-between">
