Comments out delete link

--- a/app/views/profiles/partials/_client-show.html.erb
+++ b/app/views/profiles/partials/_client-show.html.erb
@@ -58,5 +58,5 @@
     <div class="tab-pane fade" id="upcoming" role="tabpanel"><%= render 'profiles/partials/client-tabs/confirmed-tab'%></div>
     <div class="tab-pane fade" id="reviews" role="tabpanel"><%= render 'profiles/partials/client-tabs/reviews-tab'%></div>
   </div>
-  <%= link_to "Delete my profile", my_profile_path, method: :delete %>
+  <%# <%= link_to "Delete my profile", my_profile_path, method: :delete %>
 </div>
