--- a/app/views/profiles/partials/_supplier-show.html.erb
+++ b/app/views/profiles/partials/_supplier-show.html.erb
@@ -59,6 +59,6 @@
     <div class="tab-pane fade" id="calendar" role="tabpanel"><%= render 'profiles/partials/tabs/calendar-tab'%></div>
   </div>
   <div class="mt-4">
-    <%= link_to "Delete my profile", my_profile_path, method: :delete %>
+    <%# <%= link_to "Delete my profile", my_profile_path, method: :delete %>
   </div>
 </div>
