--- a/app/views/daycares/new.html.erb
+++ b/app/views/daycares/new.html.erb
@@ -1,4 +1,7 @@
-<div class="container form my-5">
+<div class="container-form my-5">
+<div class="row">
+<div class="d-flex justify-content-center">
+<div class="col col-6">
   <h1>New Daycare</h1>
     <%= simple_form_for(@daycare) do |f| %>
       <%= f.input :name %>
@@ -13,4 +16,7 @@
       <%= f.input :photos, as: :file, input_html: { multiple: true } %>
       <%= f.submit "Create Daycare", class: "btn btn-primary" %>
     <% end %>
+    </div>
+  </div>
+  </div>
 </div>
