--- a/app/views/profiles/partials/client-tabs/_favorites-tab.html.erb
+++ b/app/views/profiles/partials/client-tabs/_favorites-tab.html.erb
@@ -3,7 +3,11 @@
   <% current_user.all_favorited.each do |daycare| %>
   <div data-controller="profile" data-profile-target="card" class='col col-sm-6'>
     <div class="card-profile mt-4 d-flex flex-column">
-        <img src= "https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" class="w-100"/>
+        <% if daycare.photos.present?  %>
+          <img src="<%= cl_image_path(daycare.photos[0].key)%>" alt="" class="w-100">
+        <% else %>
+          <img src="https://www.todaysparent.com/wp-content/uploads/2016/09/daycare-germs-what-you-need-to-know-1280x960-new.jpg" alt="" class="w-100">
+        <% end %>
       <div class="card-profile-infos d-flex justify-content-between">
         <div class="d-flex justify-content-between">
           <div class="d-flex flex-column align-items-between m-2">
