Added columns to new daycare form

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -129,3 +129,16 @@ font-size: 22px;
 .banner .col-6{
   width:45% !important;
 }
+
+.tags-form-column {
+  height: 300px
+}
+
+.optional label{
+  color: #63AEF2
+}
+
+.container-form h1 {
+  color: #FF6053;
+  margin-bottom: 32px
+}
