--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -152,3 +152,9 @@
   padding-right: 8px;
   margin-bottom: 0px;
 }
+
+.line-break-form {
+    border-bottom: 1px solid rgba(80,80,80,0.2);
+    padding-bottom: 24px;
+    margin-bottom: 24px;
+}
