Cleaned up form font and button

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -158,3 +158,12 @@
     padding-bottom: 24px;
     margin-bottom: 24px;
 }
+
+
+.col-form-label {
+  color:#63AEF2;
+}
+
+.form-check label {
+  color:  rgb(50,50,50);
+}
